--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 header {
-    background: url(images/central_park.jpg) 0 -200px no-repeat;
-    background-size: 1500px;
+    background: url(Images/central_park.jpg) 0 -200px no-repeat;
+    background-size: 100%;
+    background-position: center;
     height: 400px;
     padding-top: 100px;
     padding-left: 100px;
@@ -28,6 +29,7 @@ li a:active {
     color: #753a30;
 }
 nav {
+    width: 100%;
     background-color: rgb(255, 245, 238);
     height: 50px;
     text-align: center;
@@ -38,16 +40,19 @@ main {
 }
 main h1 {
     color: rgb(129, 141, 179);
-    font-family: Arial;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 table {
     margin-top: 35px;
 }
+
 table, caption, th, td {
     border: 1px solid #000;
 }
+
 th, td {
-    width: 150px;
+    width: 150 px;
     height: 35px;
     text-align: center;
 }
@@ -58,27 +63,140 @@ caption {
     padding-top: 15px;
     color: #753a30;
 }
+
 label {
     display: block;
     margin: 15px 0 0 0;
 }
+
 input {
     width: 300px;
 }
+
 input[type="radio"] {
     width: 25px;
 }
 textarea {
     width: 300px;
 }
+
 input[type="submit"] {
     display: block;
     margin: 20px 0 10px 0;
     width: 100px;
 }
+
+#album {
+    display: grid;
+    grid-template-columns: 100%;
+    width: 80%;
+    padding-top: 60px;
+    padding-bottom: 20px;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+
+@media (min-width: 55em){
+    #album {
+      display: grid;
+      grid-template-columns: 50% 50%;
+    }
+}
+
+#album .gallery {
+    position: relative;
+    display: block;
+    margin: 0 15px;
+    float: left;
+    width: auto;
+}
+
+#album .gallery img {
+    width: 100%;
+    height: auto;
+}
+
+#album .caption {
+    text-align: center;
+    padding: 16px 0;
+    background-color: rgb(255, 245, 238);
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: rgb(129, 141, 179);
+    margin-bottom: 10px;
+}
+
+#album .gallery:hover .title {
+    text-align: center;
+    padding: 1em 1.5em;
+    background-color: rgba(255, 245, 238, .75);
+    font-size: 18px;
+    font-weight: 580;
+    text-transform: capitalize;
+    opacity: 1;
+    transition: 0.5s ease;
+    cursor: pointer;
+}
+
+#album .title {
+    position: absolute;
+    top: calc(75% - 34px);
+    left: 10%;
+    opacity: 0;
+}
+
+#card {
+    position: fixed;
+    display: none;
+    width: 400px;
+    height: fit-content;
+    padding-bottom: 20px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    background-color: rgba(0, 0, 0, .75);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: ease 0.2s;
+    border-radius: 20px;
+}
+
+#card:hover{
+    width: 420px;   
+    padding: 20px 0;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+#card #card-title {
+    margin: 10%;
+    font-size: 22px;
+    color: white;
+}
+
+#card #card-text {
+    margin: 10%;
+    color: white;
+}
+
+#card #card-exit {
+    right: 0;
+    left: 0;
+    margin: auto;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    background-color: transparent;
+    cursor: pointer;
+}
+
 footer {
+    width: 100%;
     height: 40px;
-    background-color: rgb(129, 141, 179);
+    background-color: rgb(128, 141, 179);
     text-align: center;
     padding-top: 20px;
     color: rgb(211, 218, 240);
